[package]
name = "rust_sound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kira = "0.7.1"
device_query = "1.1.2"
gilrs-core = "0.5.2"
env_logger = "0.10.0"
crossterm_input = "0.5.0"
rdev = "0.5.2"
